# slack-standup

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  serverless.yml
src/: lib.rs
