[package]
name = "slack-standup"
version = "0.1.0"
publish = false

[lib]
crate-type = ["cdylib"]
name = "lambda"

[dependencies]
chrono = "0.4"
cpython = "0.1"
envy = "0.3"
failure = "0.1"
futures = "0.1"
goji = "0.2"
lando = "0.1"
lazy_static = "1.1"
maplit = "1.0"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
